# simple-dependency-injection

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: develop-pipeline.yml  production-pipeline.yml  pull-request-pipeline.yml  staging-pipeline.yml
simple_dependency_injection/: dependency_container.py
tests/: test_dependency_container.py
