[tool.poetry]
name = "simple-dependency-injection"
version = "0.1.0"
description = ""
authors = ["AiAmEspanis <rafaperez.software@gmail.com>"]
readme="README.md"
license="MIT"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3 :: Only",
]
keywords=["DI"]
packages = [
    { include = "simple_dependency_injection" }
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
